changing project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brunoumbelino.github.io/Drum-Machine/",
+  "homepage": "https://brunoumbelino.github.io/Sampler-Machine/",
   "name": "drum-machine",
   "version": "0.1.0",
   "private": true,
